# toop

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  deploy.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: README.md  com.aliirani.toop.plist  launch-toop.sh
docs/: PRIVACY.md
docs/plans/: 2026-05-14-toop-volleyball-team-balancing-bot.md  2026-05-29-enforce-100-coverage-ci.html  2026-06-02-toop-interactive-admin-commands.html  2026-06-02-toop-voting-pool-and-ghost-players.html
docs/plans/done/: 2026-05-14-toop-volleyball-team-balancing-bot.md  2026-05-29-enforce-100-coverage-ci.html  2026-06-02-toop-interactive-admin-commands.html
src/toop/: __main__.py  admin.py  balance.py  bot.py  commands.py  config.py  contacts.py  db.py  drift.py  durations.py  i18n.py  pause.py  photos.py  players.py  poll.py  rating.py  rsvp.py  schema.sql  selection.py  sessions.py  snapshots.py  voting_queue.py
src/toop/handlers/: alerts.py  change_player.py  events.py  health.py  help.py  ops.py  poll.py  ratings.py  roster.py  rsvp.py  sessions.py  snapshot.py  voting.py
tests/: conftest.py  test_admin.py  test_alerts.py  test_auto_snapshot.py  test_balance.py  test_bot_wiring.py  test_change_player.py  test_commands.py  test_composite.py  test_config.py  test_contacts.py  test_db.py  test_drift.py  test_edge_cases.py  test_events_handlers.py  test_health.py  test_help_handler.py  test_i18n.py  test_onboarding.py  test_ops.py  test_pause.py  test_photos.py  test_players.py  test_poll.py  test_poll_handlers.py  test_rating.py  test_rating_refresh.py  test_ratings_handler.py  test_rename_handler.py  test_roster_handlers.py  test_rsvp.py  test_rsvp_handlers.py  test_selection.py  test_session_handlers.py  test_sessions.py  test_set_photo_handler.py  test_snapshot_flow.py  test_voting_handler.py  test_voting_photo.py  test_voting_queue.py
