[project]
name = "toop"
version = "0.1.0"
description = "Telegram bot that balances weekly 6v6 volleyball teams via peer pairwise voting"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[ext]>=22.0",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "aiosqlite>=0.20",
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toop"]
