[project]
name = "toop"
version = "0.1.0"
description = "Telegram bot that balances weekly 6v6 volleyball teams via peer pairwise voting"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[ext]>=22.0",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "aiosqlite>=0.20",
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0",
    "ruff>=0.11.0",
    "ty>=0.0.1a0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=toop --cov-report=term-missing"

[tool.coverage.run]
source = ["toop"]
branch = false

[tool.coverage.report]
show_missing = true

[tool.ty.src]
# Type-check pure logic modules. Handler/wiring files are excluded because
# python-telegram-bot's CommandHandler signatures don't compose cleanly with
# `async def handler() -> None` (ty reports Awaitable[None] vs Coroutine[...]).
# Those modules are exercised by integration tests instead.
exclude = [
    "src/toop/bot.py",
    "src/toop/handlers/**",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toop"]
